# numtracker

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  _config.yml  build.rs  catalog-info.yaml
.github/: codecov.yml  dependabot.yml  renovate.json
.github/workflows/: ci.yml  publish.yaml
.sqlx/: query-02d6faf0ffd8fb96031f7a8e824de4e4552ea72176c5e885cea3e517316e7774.json  query-0369dff92c3f37170cf84fadb26aaa84c5075f6f8a584ea5115e4a172c0f14f9.json  query-03cac7cb5b485c93b71cdbe03400b9423c1b63146c2d93e3f1b08857f28a6c33.json  query-0b0bba88cda878749dffc27e7af82b602b734009b6a0041f8060ab07ec1e08a4.json  query-0ec4608cdcd1186a101703bd3e06ce58104a77676dd8d4402e742197299fa07c.json  query-138c280e1d234a15e10428f5b949be0c88475c2011258e2e373303149e52a70d.json  query-14d341c0556d4f30366962da56ce4bde56149196b08d7ce2fb8a6ee7b6c19c61.json  query-15bdb26777072892c7feb712ae373379f45ec83a36351fc19353f8f48262c79e.json  query-1a93cbcca1c6f742ebfb8000192918435c959877835e5e6f2520539cbe46e2cd.json  query-1ad61bdc8babbb4403c535318ccf657b3ea98a04126539ccf08f8251d87ed32b.json  query-1e27df9c4e39c3cde34ca1823076214f255cc78c8fee4aaf65bd6c827569cd07.json  query-208ba2473f156f6ce2915f93a4a7c50f9d9047eab9d78cd0fcda177361c1834c.json  query-255dfe0188e2df159240989eab5e4ad9dcee45f4c75abd81817cb609f274f501.json  query-26430640d917d25b6ee9484094232ac9e5cdaabbac880ae667ecd953baff99c9.json  query-26ebf624c682a2afd51670b208950af7825401ecb117de03fea7eba06de0d06b.json  query-2cb6dd6d8c6a3a509025d02b47cb64c51a0e1b29a493bb553335d3d5eb4408d1.json  query-30e7b9868a569ff84bf63ad3f750cd3f81e49b4836604e2d040c09aba1b590b0.json  query-33ba51561995c972e35659b39fd967727e975d0fe1a08fa9a318fd8a13585308.json  query-3a96db43cffc69a69314b32df78fa1dfaff72cbd3ded7149c9807d8e5a6f684b.json  query-3bd30b88b2e183ab268758442af039e34878e256283827d7c777a68566a3c4a9.json  query-3e40a4d278414424446389f76733c01710c7aae8f5c2c994da1e4a333bccb602.json  query-3e69760d39f1bb8d93528e04d94faf6de4e13f4918c567384db176f64577b663.json  query-4323ce25def2ee41c1019820cad67f86fe119aa5b5d7f36e49bece9ab6048c38.json  query-432fc2a5f494d42d7adb3b4e9bc4528d120ccff9c68b5e7e9209a3eb5ab1934a.json  query-4a15b006f2195d02b88180dd3a13fd9a028d179e53e02794ac84f985aa57379f.json  query-525f646395f42514edaa98c4397e3194adfae6d494f3b1471e856cf9db2c64de.json  query-5d00db9b9af7d5b00357c165cb11753bc6a4444e407d3f84b880dc247490935d.json  query-611dcd7d5c83fe0fc72626e689ac7be9e4aa672d149f4a1424f47ac94b920c2b.json  query-692d517848fd2d821d144bb4c2f9237ffed350674cfddbc6509fd9f6e0bc2117.json  query-6ace7ca9cc36fcac0bbf91458d930daa1c7ccb247aed6aee55bed6e6b89d64cf.json  query-6d1e14903687dc07c77d9dbc0e2e2bf1cf90adca88506b4c484f4f6234463200.json  query-6deeea832def01a5573571c1c45662029080dd82a21ab6602c994222285d216e.json  query-7051b3a23e08bf47102ef4244803a8829f0c48086938a02654afe7d6cee244fa.json  query-732d78dd385205d3a4f4b2f71dc98cf755078ddff46bdc3b6c0074d4cc885a1f.json  query-74ddd4d18b2b3529839b609905af032ed741abbd5f26fb9dd0c3079a313ef958.json  query-77054c7c20195a2a7766eb83bf39add56ec84bb502ce39d26cd9394703bdd71a.json  query-77a2b553a64da55cc942c1eb5d7f23aad0de17255ea1b82c6aba0018d3ca1fa6.json  query-7b769dea685f49e8ff6d24a69e69e7037c1dc197db8bd273ec53e63a85e85351.json  query-7c6ab5079f78a0d58ff4510076b8789d568d7b80b8ca47b271fc26e5a8fa3583.json  query-83c86073189f4786c18461e1cbe8d8636740e19eaedf527493ae2c90efbad037.json  (+23 more)
helm/: Chart.yaml  values.yaml
helm/numtracker/: Chart.yaml  values.yaml
helm/numtracker/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  serviceaccount.yaml  statefulset.yaml  storage.yaml
helm/numtracker/templates/tests/: test-connection.yaml
helm/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  storage.yaml
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_extension_name.down.sql  0002_extension_name.up.sql  0002_numbers.down.sql  0002_numbers.up.sql  0003_beamline_instrument.down.sql  0003_beamline_instrument.up.sql  0003_template_table.down.sql  0003_template_table.up.sql  0003_template_views.down.sql  0003_template_views.up.sql  0004_gda_directories.down.sql  0004_gda_directories.up.sql  0004_rename_visit_to_directory.down.sql  0004_rename_visit_to_directory.up.sql  0005_template_table.down.sql  0005_template_table.up.sql  20240802111111_init.sql
numtracker/: Chart.yaml
queries/: all_beamlines.sql  configuration.graphql  configure.graphql  detector_template.sql  get_beamline_id.sql  get_detector_template.sql  get_scan_template.sql  get_visit_template.sql  increment_scan_number.sql  insert_beamline.sql  insert_detector_template.sql  insert_scan_template.sql  insert_visit_template.sql  latest_scan_number.sql  number_file_directory.sql  path.graphql  scan_template.sql  set_detector_template.sql  set_fallback.sql  set_scan_number.sql  set_scan_template.sql  set_visit_template.sql  visit_template.sql
src/: build_info.rs  cli.rs  client.rs  configuration.rs  context.rs  controller.rs  db_service.rs  fallback.rs  gda.rs  graphql.rs  info.rs  lib.rs  logging.rs  main.rs  numtracker.rs  paths.rs  sync.rs  template.rs
src/cli/: client.rs  mod.rs
src/client/: auth.rs  cli_auth.rs  config.rs  mod.rs  pkce_auth.rs
src/graphql/: auth.rs  mod.rs
static/: 404.html  get_graphql_warning.html  service_schema  service_schema.graphql
