[package]
name = "numtracker"
# This version is *not* used for the built container image. It is set during the
# CI build process so that the version always matches the latest git tag.
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.83"

[lints.clippy]
unwrap_used = "deny"

[dependencies]
async-graphql = { version = "7.0.15", features = ["tracing"] }
async-graphql-axum = "7.0.15"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["cargo", "derive", "env", "string"] }
futures = "0.3.31"
opentelemetry = "0.27.1"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.13.0", features = ["attributes"], default-features = false }
httpmock = { version = "0.7.0", default-features = false }
rstest = "0.24.0"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
tempfile = "3.16.0"

[build-dependencies]
built = { version = "0.7.7", features = ["git2", "chrono"] }
