[package]
name = "numtracker"
# This version is *not* used for the built container image. It is set during the
# CI build process so that the version always matches the latest git tag.
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.83"

[lints.clippy]
unwrap_used = "deny"

[features]
default = ["client"]
client = ["dep:dirs", "dep:graphql_client", "dep:openidconnect", "dep:toml"]

[dependencies]
async-graphql = { version = "7.0.16", features = ["tracing"] }
async-graphql-axum = "7.0.16"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["cargo", "derive", "env", "string"] }
derive_more = { version = "2.0.1", features = ["error", "display", "from", "deref"] }
futures = "0.3.31"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

# Dependencies required if building with client subcommand
dirs = { version = "6.0.0", optional = true }
graphql_client = { version = "0.14.0", optional = true }
openidconnect = { version = "4.0.0", optional = true }
toml = { version = "0.8.22", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
async-std = { version = "1.13.1", features = ["attributes"], default-features = false }
httpmock = { version = "0.7.0", default-features = false }
rstest = "0.25.0"
serde_json = { version = "1.0.140", features = ["preserve_order"] }
tempfile = "3.19.1"

[build-dependencies]
built = { version = "0.7.7", features = ["git2", "chrono"] }
